# retroplay

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.tsx  OnboardingModal.tsx
src/hooks/: useAudioPlayer.ts
src/styles/: retro.css
src/utils/: format.ts  lrc.ts  lrclib.ts  tauriBridge.ts  types.ts
