[package]
name = "retroplay"
version = "1.0.0"
resolver = "2"
edition = "2021"

[lib]
name = "retroplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
id3 = "1"
walkdir = "2"
mp3-duration = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"

[profile.release]
opt-level = "z"      # optimalkan ukuran biner
lto = true           # link-time optimization
codegen-units = 1    # optimasi lebih agresif (build lebih lambat)
strip = true         # buang simbol debug
panic = "abort"      # handler panic lebih kecil
